# record_rgbd_service

./: .gitignore  CMakeLists.txt  Makefile  README.md  mainpage.dox  manifest.xml
launch/: save_rgb.launch  save_rgbd.launch
src/: record_rgb_video.cpp  record_rgbd_video.cpp
src/record_rgbd_service/srv/: _SaveImage.py  __init__.py
srv/: SaveImage.srv
